--- a/ArtistEventListings/Views/Shared/_Layout.cshtml
+++ b/ArtistEventListings/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/js")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
